--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.1.5",
+    "@nestjs/typeorm": "^8.0.3",
     "bcryptjs": "^2.4.3",
     "fastify-swagger": "^4.13.1",
     "jsonwebtoken": "^8.5.1",
