--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/swagger": "^5.1.5",
     "@nestjs/typeorm": "^8.0.3",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "fastify-swagger": "^4.13.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
